# utilities

./: CMakeLists.txt
examples/: CMakeLists.txt  util_gen.cpp
include/util/: always_false.h  generator.h
unittests/: CMakeLists.txt  ut_util_gen_enumerator.cpp  ut_util_gen_generator.cpp  ut_util_gen_range.cpp  ut_util_gen_zip.cpp
